--- a/MobileFlightBag/app/src/main/res/layout/content_main.xml
+++ b/MobileFlightBag/app/src/main/res/layout/content_main.xml
@@ -1,19 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.flightbag.mobileflightbag.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context=".Activity.MainActivity"
+    tools:showIn="@layout/activity_main"
+    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/image_spacing"
+        android:paddingTop="@dimen/image_spacing"
+        android:layout_weight="1">
+        <ImageButton
+            android:id="@+id/solo_flight"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/solo"
+            android:scaleType="fitXY"
+            android:alpha="0.6"
+            android:contentDescription="@string/solo" />
+        <TextView
+            android:id="@+id/multi_crew"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:text="@string/solo"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/image_spacing"
+        android:paddingTop="@dimen/image_spacing"
+        android:layout_weight="1">
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/multi"
+            android:scaleType="fitXY"
+            android:alpha="0.6"
+            android:contentDescription="@string/multi_crew"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:text="@string/multi_crew"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/image_spacing"
+        android:paddingTop="@dimen/image_spacing"
+        android:layout_weight="1">
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/settings"
+            android:scaleType="fitXY"
+            android:alpha="0.6"
+            android:contentDescription="@string/settings"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:text="@string/settings"/>
+    </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+</LinearLayout>
