--- a/MobileFlightBag/app/src/main/res/layout/content_checklist.xml
+++ b/MobileFlightBag/app/src/main/res/layout/content_checklist.xml
@@ -15,7 +15,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checklist_listview">
+        android:id="@+id/checklist_listView">
 
     </ListView>
 
